--- a/index.html
+++ b/index.html
@@ -1,6 +1,33 @@
-<a href="https://bit.ly/iptvoldhd" target="_blank">
+<style>
+    #yenileButton {
+        background-color: red;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    #yenileButton:hover {
+        background-color: darkred;
+    }
+</style>
 
-<img src="/iptv.jpg" width="100%" alt="iptv satın al"></a>
+<button id="yenileButton">Yayın Akışı Eskiyse, Yayınlar Açılmıyorsa Bu Butona Tıklayın Yada F5 Yapın!</button>
+
+<script>
+    document.getElementById("yenileButton").addEventListener("click", function() {
+        location.reload();
+    });
+</script>
+
+<center>
+
+<a href="https://cutt.ly/HeDtv9P7" target="_blank">
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiy1SZZ5hXaRL8IEJLVDhFSUYRm9qkcrLP6HFzsIug5AIyC3My9YazsY6S4pvgbKZbvf-cVcf6A2M_YPSMIe2UYlqo7omdnXu8eBI9fsXOf0SZgUfwWU_1UoMs9u4_UIo_NYSql58nVl81s8nb4UGAHrvTOU8lR8A9VIKXBXyCayS_1x4yRmJUfedpLkUg/s16000/728x90_2.gif" alt="kralbet" alt="kralbet" width="100%"/>
+</a>
+
+<a href="https://heylink.me/t24denemeb/" target="_blank" style="color:red; background-color:black; padding:10px; display:inline-block; font-size:26.5px; font-weight:bold;" rel="noopener">Türkiyenin En çok Kazandıran Sitesinin Promosyonları</a>
+<br />
 
     <section class="yayinAndListe"><div class="yayin" id="yayinSection">
 <iframe id="customIframe" class="player" src="/channel.html?id=yayinstar" style="overflow: hidden; " scrolling="no" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
