--- a/index.html
+++ b/index.html
@@ -609,6 +609,17 @@
                         <!-- // akis bitis -->
                     </div>
 
+
+
+<script>
+document.querySelectorAll('.channel-link').forEach(item => {
+    item.addEventListener('click', function(e) {
+        e.preventDefault();
+        document.getElementById('player').scrollIntoView({ behavior: 'smooth' });
+    });
+});
+</script>
+
                     
                         <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js' type='text/javascript'></script>
     <script type='text/javascript'>
